--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>  
 <body>
 <video src="rabbit320.mp4" controls></video>
-<audio></audio>
+<audio src="rabbit320.mp4"></audio>
 <script>
 var context=new (window.AudioContext||window.webkitAudioContext)();
 var source=context.createMediaElementSource(document.querySelector("video"));
