--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <audio src="" controls></audio>
 <script>
 var context=new (window.AudioContext||window.webkitAudioContext)();
-document.querySelector("audio").srcObject=context.createMediaStreamDestination().stream;
-context.createMediaElementSource(document.querySelector("video")).connect(context.destination);
+var dest=context.createMediaStreamDestination();
+document.querySelector("audio").srcObject=dest.stream;
+context.createMediaElementSource(document.querySelector("video")).connect(dest);//context.destination
 </script>
 </body>
 </html>
