--- a/test.html
+++ b/test.html
@@ -1,36 +1,22 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <meta charset="UTF-8">
-<title></title>
+<title>test</title>
 <body>
-
 </body>
-
-
 <script>
-
 var video = document.createElement("video");
 video.setAttribute("src", "rabbit320.mp4");
-
 video.controls = true;
 video.autoplay = true;
 document.body.appendChild(video);
-
+var audio = document.createElement("audio");
+audio.controls = true;
+audio.autoplay = true;
+document.body.appendChild(audio);
 var context = new (AudioContext||webkitAudioContext)();
 var gainNode = context.createGain();
-gainNode.gain.value = 1;                   // Change Gain Value to test
-filter = context.createBiquadFilter();
-filter.type = 2;                          // Change Filter type to test
-filter.frequency.value = 5040;            // Change frequency to test
-
-// Wait for window.onload to fire. See crbug.com/112368
 window.addEventListener('load', function(e) {
-  // Our <video> element will be the audio source.
   var source = context.createMediaElementSource(video);
-  source.connect(gainNode);
-  gainNode.connect(filter);
-  filter.connect(context.destination);
-
+  source.connect(context.createMediaElementDestination(audio));
 }, false);
-
-
 </script>
