--- a/test.html
+++ b/test.html
@@ -39,7 +39,7 @@ videoFileAsBuffer.then(function (data) {
         song.buffer = renderedBuffer;
         song.connect(audioContext.destination);
         song.start();
-        }).catch(function (err) {console.log('Rendering failed: ' + err);});
+        }).catch(function (err) {alert('Rendering failed: ' + err);});
     });
 }
 </script>
