--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>test</title>
-
+<script>window.onerror=function(msg,url,ln,col,err){alert('Error\n\n'+msg+'\nLine '+ln+'\nColumn '+col+'\nStack Trace\n'+err);}</script>
 </head>
 <body>
 <input type="file"/>
