--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
    <button onclick="go();">Go!</button>
 
 <script>
-function go(){try{
+function go(){
 function getBuffer(resolve) {
     var reader = new FileReader();
     reader.onload = function () {
@@ -22,6 +22,7 @@ var audioContext = new(window.AudioContext || window.webkitAudioContext)();
 //fileData = new Blob([input.files[0]]);
 var videoFileAsBuffer = new Promise(getBuffer);
 videoFileAsBuffer.then(function (data) {
+   alert();
     audioContext.decodeAudioData(data).then(function (decodedAudioData) {
         var offlineAudioContext = new (webkitOfflineAudioContext||OfflineAudioContext)(2, 44100 * 100, 44100);
         var soundSource = offlineAudioContext.createBufferSource();
@@ -41,7 +42,7 @@ videoFileAsBuffer.then(function (data) {
         }).catch(function (err) {alert('Rendering failed: ' + err);});
     });
 });
-}catch(e){alert(e);}}
+}
 </script>
 </body>
 </html>
