--- a/workingtest.html
+++ b/workingtest.html
@@ -2,26 +2,21 @@
 <meta charset="UTF-8">
 <title>workingtest</title>
 <body>
-
+<button onclick="go();">Go!</button>
 </body>
-
-
 <script>
-
+function go(){
 var video = document.createElement("video");
 video.setAttribute("src", "rabbit320.mp4");
-
 video.controls = true;
 video.autoplay = true;
 document.body.appendChild(video);
-
 var context = new webkitAudioContext();
 var gainNode = context.createGain();
 gainNode.gain.value = 1;                   // Change Gain Value to test
 filter = context.createBiquadFilter();
 filter.type = 2;                          // Change Filter type to test
 filter.frequency.value = 5040;            // Change frequency to test
-
 // Wait for window.onload to fire. See crbug.com/112368
 window.addEventListener('load', function(e) {
   // Our <video> element will be the audio source.
@@ -29,8 +24,6 @@ window.addEventListener('load', function(e) {
   source.connect(gainNode);
   gainNode.connect(filter);
   filter.connect(context.destination);
-
 }, false);
-
-
+}
 </script>
