--- a/workingtest.html
+++ b/workingtest.html
@@ -2,28 +2,29 @@
 <meta charset="UTF-8">
 <title>workingtest</title>
 <body>
-<button onclick="go();">Go!</button>
+<input type="file" onchange="read(this.files[0]);"/>
+<button onclick="go();" disabled>Go!</button>
 </body>
 <script>
-function go(){
-var video = document.createElement("video");
-video.setAttribute("src", "rabbit320.mp4");
-video.controls = true;
-video.autoplay = true;
-document.body.appendChild(video);
-var context = new (AudioContext||webkitAudioContext)();
-var gainNode = context.createGain();
-gainNode.gain.value = 1;                   // Change Gain Value to test
-filter = context.createBiquadFilter();
-filter.type = 2;                          // Change Filter type to test
-filter.frequency.value = 5040;            // Change frequency to test
-// Wait for window.onload to fire. See crbug.com/112368
-window.addEventListener('load', function(e) {
-  // Our <video> element will be the audio source.
-  var source = context.createMediaElementSource(video);
-  source.connect(gainNode);
-  gainNode.connect(filter);
-  filter.connect(context.destination);
-}, false);
+function read(file){
+var reader=new FileReader();
+reader.addEventListener("onloadend",function(){document.querySelector("button").disabled=0;});
+reader.readAsArrayBuffer(file);
+}
+function go(buffer){
+  var offlineAudioContext = new OfflineAudioContext(numberOfChannels, sampleRate * duration, sampleRate);
+  var soundSource = offlineAudioContext.createBufferSource();
+  var videoFileAsBuffer = buffer; // arraybuffer
+  audioContext.decodeAudioData(videoFileAsBuffer).then(function (decodedAudioData) {
+    myBuffer = decodedAudioData;
+    soundSource.buffer = myBuffer;
+    soundSource.connect(offlineAudioContext.destination);
+    soundSource.start();
+    offlineAudioContext.startRendering().then(function (renderedBuffer) {
+      console.log(renderedBuffer); // outputs audiobuffer
+    }).catch(function (err) {
+      console.log('Rendering failed: ' + err);
+    });
+  });
 }
 </script>
