--- a/workingtest.html
+++ b/workingtest.html
@@ -11,7 +11,8 @@ reader.addEventListener("load",function(){document.querySelector("button").remov
 reader.readAsArrayBuffer(file);
 }
 function go(buffer){
-  var offlineAudioContext = new OfflineAudioContext(numberOfChannels, sampleRate * duration, sampleRate);
+  var audioContext = new(window.AudioContext || window.webkitAudioContext)();
+  var offlineAudioContext = new OfflineAudioContext(2, 44100 * 100, 44100);
   var soundSource = offlineAudioContext.createBufferSource();
   var videoFileAsBuffer = buffer; // arraybuffer
   audioContext.decodeAudioData(videoFileAsBuffer).then(function (decodedAudioData) {
@@ -21,6 +22,10 @@ function go(buffer){
     soundSource.start();
     offlineAudioContext.startRendering().then(function (renderedBuffer) {
       console.log(renderedBuffer); // outputs audiobuffer
+      var song = audioContext.createBufferSource();
+      song.buffer = renderedBuffer;
+      song.connect(audioContext.destination);
+      song.start();
     }).catch(function (err) {
       console.log('Rendering failed: ' + err);
     });
