--- a/test.html
+++ b/test.html
@@ -22,6 +22,7 @@ videoFileAsBuffer.then(function (data) {
         soundSource.buffer = mySoundBuffer;
 soundSource.connect(offlineAudioContext.destination);
 soundSource.start();
+alert("begin render");
 offlineAudioContext.startRendering().then(function (renderedBuffer) {
     console.log(renderedBuffer); // outputs audiobuffer
     var song = audioContext.createBufferSource();
