--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 <body>
 <input type="file"/>
 <button onclick="go();">Go!</button>
-<audio controls></audio>
+<audio autoplay controls></audio>
 <script>
 function go(){
 var offlineAudioContext = new OfflineAudioContext(2, 44100 * 100, 44100);
