--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ var audioContext=new(window.AudioContext||window.webkitAudioContext)(),reader=ne
 </head>
 <body>
   <h1>video2audioJS</h1>
-  <h3>Using iOS Safari? Sorry, but a <a href="https://bugs.webkit.org/show_bug.cgi?id=181939">bug</a> currently prevents this from functioning correctly.<br><a href="https://www.youtube.com/watch?v=v_mF6lWA3LU" target="_blank"><i>For now, you can listen to this on loop.</i></a></h3>
+  <h3>Using iOS Safari? Sorry, but a <a href="https://bugs.webkit.org/show_bug.cgi?id=181939">bug</a> currently prevents this from functioning correctly.<br><a href="https://soundcloud.com/cg5-beats/do-you-know-da-wae" target="_blank"><i>For now, you can listen to this on loop.</i></a></h3>
   <input type="file" onchange="document.querySelector('button').removeAttribute('disabled');"/><br/>
   <button onclick="go();" disabled>Create AudioBuffer</button><br/>
   <button disabled>Play/Download WAV</button>
