--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>video2audioJS</title>
+  <title>video2audioJS - A cool little in-browser pure JavaScript converter, which unfortunately, due to a bug, does not work on iOS Safari.</title>
   <base href="/">
   <script>window.onerror=function(msg,url,ln,col,err){alert('Error\n\n'+msg+'\nLine '+ln+'\nColumn '+col+'\nStack Trace\n'+err);}</script>  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>
